[project]
name = "empkins-micro"
version = "0.1.0"
description = "A Python package to work with EmpkinS Micro data."
authors = [
    { name = "Robert Richer", email = "robert.richer@fau.de" },
    { name = "Luca Abel", email = "luca.abel@fau.de" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "empkins-io",
    "pepbench",
]

[project.optional-dependencies]
audio = [
    "pyannote.audio>=3.0.1,<4",
    "praat-parselmouth>=0.4.3,<0.5",
    "webrtcvad>=2.0.10,<3",
    "pydub>=0.25.1,<0.26",
    "wave>=0.0.2,<0.0.3",
    "contextlib2>=21.6.0,<22",
    "collection>=0.1.6,<0.2",
    "torch>=2.0.0,<3",
]
radar = [
    "tensorflow-macos==2.10.0 ; sys_platform == 'darwin'",
    "pywavelets>=1.4.1,<2",
]

[dependency-groups]
dev = [
    "pytest~=5.2",
    "poethepoet>=0.10.0,<0.11",
    "ruff>=0,<1",
]

[tool.uv.sources]
empkins-io = { path = "../empkins-io", editable = true }
pepbench = { path = "../pepbench", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

# Reformat all files using black and sort import
[tool.poe.tasks]
_format = "ruff format ."
_auto_fix = "ruff check . --fix-only --show-fixes --exit-zero"
_auto_fix_unsafe = "ruff check . --fix-only --show-fixes --exit-zero --unsafe-fixes"
format = ["_auto_fix", "_format"]
format_unsafe = ["_auto_fix_unsafe", "_format"]
lint = { cmd = "ruff check src --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff check src --output-format=github"
_check_format = "ruff format . --check"
ci_check = { sequence = ["_check_format", "_lint_ci"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest --cov=src --cov-report=xml", help = "Run Pytest with coverage." }
docs = { "script" = "_tasks:task_docs" }
version = { "script" = "_tasks:task_update_version" }
register_ipykernel = { cmd = "python -m ipykernel install --user --name empkins-micro --display-name empkins-micro", help = "Add a new jupyter kernel for the project." }
remove_ipykernel = { cmd = "jupyter kernelspec uninstall empkins-micro", help = "Remove the project specific jupyter kernel." }
default = { sequence = ["format", "lint", "test"], help = "Run the default pipeline, consisting of formatting, linting, and testing." }

